[package]
name = "platformer"
version = "0.1.0"
authors = ["Frank Bryden <frank.bryden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez" }
rand = "0.7.3"

[profile.release]
debug = true